--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,9 +4,6 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
 
-//    packagingOptions(
-//            excludes: 'assets/*'
-//    )
     defaultConfig {
         applicationId "com.compass.ux"
         minSdkVersion 21
@@ -80,8 +77,6 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.0'
     implementation fileTree(dir: 'libs', include: ['*.aar', '*.jar'], exclude: [])
-    //地图转换
-//    implementation 'com.amap.api:map2d:6.0.0'
-
-//    implementation 'commons-codec:commons-codec:1.14'
+    //压缩
+    implementation 'top.zibin:Luban:1.1.8'
 }
