--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,13 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    android{
+        lintOptions {
+            checkReleaseBuilds false
+            abortOnError false
+        }
+    }
 }
 
 dependencies {
