--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,7 +58,7 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
-    android{
+    android {
         lintOptions {
             checkReleaseBuilds false
             abortOnError false
@@ -74,8 +74,11 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     //集成大疆无人机
-    implementation 'com.dji:dji-uxsdk:4.12'
-    compileOnly 'com.dji:dji-sdk-provided:4.12'
+//    implementation 'com.dji:dji-uxsdk:4.12'
+//    compileOnly 'com.dji:dji-sdk-provided:4.12'
+
+    implementation 'com.dji:dji-sdk:4.13.1'
+    compileOnly 'com.dji:dji-sdk-provided:4.13.1'
 
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0-rc01'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -90,4 +93,14 @@ dependencies {
     implementation 'com.yanzhenjie:permission:2.0.3'
     //bugly
     implementation 'com.tencent.bugly:crashreport:latest.release'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+
+    implementation 'com.amap.api:map2d:6.0.0'
+
+    //内存泄漏测试
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.6.3'
+    debugImplementation 'com.squareup.leakcanary:leakcanary-support-fragment:1.6.3'
+
+    //permission权限
+    implementation 'com.yanzhenjie:permission:2.0.3'
 }
