--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,29 @@ android {
         doNotStrip "*/*/libAMapSDK_MAP_v6_9_2.so"
         doNotStrip "*/*/libDJIMOP.so"
         exclude 'META-INF/rxjava.properties'
+
+//        doNotStrip "*/*/libdjivideo.so"
+//        doNotStrip "*/*/libSDKRelativeJNI.so"
+//        doNotStrip "*/*/libFlyForbid.so"
+//        doNotStrip "*/*/libduml_vision_bokeh.so"
+//        doNotStrip "*/*/libyuv2.so"
+//        doNotStrip "*/*/libGroudStation.so"
+//        doNotStrip "*/*/libFRCorkscrew.so"
+//        doNotStrip "*/*/libUpgradeVerify.so"
+//        doNotStrip "*/*/libFR.so"
+//        doNotStrip "*/*/libDJIFlySafeCore.so"
+//        doNotStrip "*/*/libdjifs_jni.so"
+//        doNotStrip "*/*/libsfjni.so"
+//        doNotStrip "*/*/libDJICommonJNI.so"
+//        doNotStrip "*/*/libDJICSDKCommon.so"
+//        doNotStrip "*/*/libDJIUpgradeCore.so"
+//        doNotStrip "*/*/libDJIUpgradeJNI.so"
+//        doNotStrip "*/*/libDJIWaypointV2Core.so"
+//        doNotStrip "*/*/libAMapSDK_MAP_v6_9_2.so"
+//        doNotStrip "*/*/libDJIMOP.so"
+//        doNotStrip "*/*/libDJISDKLOGJNI.so"
+//        exclude 'META-INF/rxjava.properties'
+
     }
 
     compileOptions {
@@ -74,11 +97,18 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     //集成大疆无人机
+//    implementation 'com.dji:dji-sdk:4.14-trial1'
+//    compileOnly 'com.dji:dji-sdk-provided:4.14-trial1'
+
     implementation 'com.dji:dji-sdk:4.13.1'
     compileOnly 'com.dji:dji-sdk-provided:4.13.1'
 
-//    implementation 'com.dji:dji-sdk:4.14trial1'
-//    compileOnly 'com.dji:dji-sdk-provided:4.14trial1'
+
+//    implementation 'com.dji:dji-sdk:4.14-trial1'
+//    compileOnly 'com.dji:dji-sdk-provided:4.14-trial1'
+
+
+
 
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0-rc01'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
