--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,8 @@
 buildscript {
     repositories {
         google()
-        jcenter()
-        
+//        jcenter()
+        jcenter(){ url 'http://jcenter.bintray.com/'}
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
@@ -17,7 +17,8 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+//        jcenter()
+        jcenter(){ url 'http://jcenter.bintray.com/'}
         maven { url 'https://jitpack.io' }
     }
 }
