--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -109,9 +109,13 @@
 
         <uses-library android:name="com.android.future.usb.accessory" />
 
+<!--        <meta-data
+            android:name="com.dji.sdk.API_KEY"
+            android:value="e4b698d80c1023b8b61a2226" /> -->
         <meta-data
             android:name="com.dji.sdk.API_KEY"
-            android:value="e4b698d80c1023b8b61a2226" /> <!-- 启用高德地图服务 -->
+            android:value="68cafaa3d0356ecdd42ab491" />
+        <!-- 启用高德地图服务 -->
         <meta-data
             android:name="com.amap.api.v2.apikey"
             android:value="a5cde3f241e787f1ef5efee127c63e29" />
