--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,14 +11,13 @@ android {
         targetSdkVersion 29
         versionCode 4
         versionName "1.0"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
         ndk {
             // On x86 devices that run Android API 23 or above, if the application is targeted with API 23 or
             // above, FFmpeg lib might lead to runtime crashes or warnings.
-            abiFilters 'armeabi-v7a', 'x86', 'arm64-v8a'
-//            abiFilters 'armeabi', 'armeabi-v7a' , 'arm64-v8a', 'x86', 'x86_64', 'mips', 'mips64'
+            abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64', 'mips', 'mips64'
         }
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -57,8 +56,6 @@ android {
         exclude 'assets/location_map_gps_locked.png'
         exclude 'assets/location_map_gps_3d.png'
 
-
-
     }
 
     compileOptions {
@@ -72,11 +69,9 @@ android {
             abortOnError false
         }
     }
+    ndkVersion '22.1.7171670'
 
 }
-
-
-
 
 
 dependencies {
@@ -86,8 +81,17 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    //集成大疆无人机
-    implementation ('com.dji:dji-uxsdk:4.14-trial1', {
+
+    implementation ('com.dji:dji-uxsdk:4.14', {
+        exclude module: 'dji-sdk'
+
+        /**
+         * Uncomment the following line to exclude amap from the app.
+         * Note that Google Play Store does not allow APKs that include this library.
+         */
+        // exclude group: 'com.amap.api'
+    })
+    implementation ('com.dji:dji-sdk:4.15', {
         /**
          * Uncomment the "library-anti-distortion" if your app does not need Anti Distortion for Mavic 2 Pro and Mavic 2 Zoom.
          * Uncomment the "fly-safe-database" if you need database for release, or we will download it when DJISDKManager.getInstance().registerApp
@@ -96,20 +100,8 @@ dependencies {
          */
         exclude module: 'library-anti-distortion'
         exclude module: 'fly-safe-database'
-
-        /**
-         * Uncomment the following line to exclude amap from the app.
-         * Note that Google Play Store does not allow APKs that include this library.
-         */
-        // exclude group: 'com.amap.api'
     })
-    compileOnly 'com.dji:dji-sdk-provided:4.14-trial1'
-
-//    implementation 'com.dji:dji-sdk:4.13.1'
-//    compileOnly 'com.dji:dji-sdk-provided:4.13.1'
-
-
-
+    compileOnly ('com.dji:dji-sdk-provided:4.15')
 
 
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0-rc01'
@@ -123,13 +115,17 @@ dependencies {
     implementation 'top.zibin:Luban:1.1.8'
     //权限
     implementation 'com.yanzhenjie:permission:2.0.3'
-    compile 'com.tencent.bugly:crashreport:latest.release' //其中latest.release指代最新Bugly SDK版本号，也可以指定明确的版本号，例如2.1.9
-    compile 'com.tencent.bugly:nativecrashreport:latest.release' //其中latest.release指代最新Bugly NDK版本号，也可以指定明确的版本号，例如3.0
+    compile 'com.tencent.bugly:crashreport:latest.release'
+    //其中latest.release指代最新Bugly SDK版本号，也可以指定明确的版本号，例如2.1.9
+    compile 'com.tencent.bugly:nativecrashreport:latest.release'
+    //其中latest.release指代最新Bugly NDK版本号，也可以指定明确的版本号，例如3.0
 
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
 
-    implementation 'com.amap.api:map2d:6.0.0'
-
+    // AMAP: Do not include if publishing to Google Play Store
+    implementation 'com.amap.api:3dmap:7.3.0'
+    implementation 'com.amap.api:search:7.3.0'
+    implementation 'com.amap.api:location:4.9.0'
     //内存泄漏测试
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.6.3'
     debugImplementation 'com.squareup.leakcanary:leakcanary-support-fragment:1.6.3'
