--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,7 +81,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    implementation ('com.dji:dji-uxsdk:4.14', {
+    implementation ('com.dji:dji-uxsdk:4.16', {
         exclude module: 'dji-sdk'
 
         /**
@@ -90,7 +90,7 @@ dependencies {
          */
         // exclude group: 'com.amap.api'
     })
-    implementation ('com.dji:dji-sdk:4.16', {
+    implementation ('com.dji:dji-sdk:4.16.1', {
         /**
          * Uncomment the "library-anti-distortion" if your app does not need Anti Distortion for Mavic 2 Pro and Mavic 2 Zoom.
          * Uncomment the "fly-safe-database" if you need database for release, or we will download it when DJISDKManager.getInstance().registerApp
@@ -100,7 +100,7 @@ dependencies {
         exclude module: 'library-anti-distortion'
         exclude module: 'fly-safe-database'
     })
-    compileOnly ('com.dji:dji-sdk-provided:4.16')
+    compileOnly ('com.dji:dji-sdk-provided:4.16.1')
 
 
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0-rc01'
@@ -114,10 +114,7 @@ dependencies {
     implementation 'top.zibin:Luban:1.1.8'
     //权限
     implementation 'com.yanzhenjie:permission:2.0.3'
-    compile 'com.tencent.bugly:crashreport:latest.release'
-    //其中latest.release指代最新Bugly SDK版本号，也可以指定明确的版本号，例如2.1.9
-    compile 'com.tencent.bugly:nativecrashreport:latest.release'
-    //其中latest.release指代最新Bugly NDK版本号，也可以指定明确的版本号，例如3.0
+    implementation files('libs/bugly.aar')
 
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
 
@@ -135,9 +132,6 @@ dependencies {
     implementation 'com.google.protobuf:protobuf-java:3.8.0'
     implementation 'com.google.protobuf:protobuf-java-util:3.8.0'
 
-    //阿里热更新
-//    api 'com.aliyun.ams:alicloud-android-hotfix:3.2.15'
-    implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.orhanobut:logger:2.1.1'
 
 
