--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,10 @@ allprojects {
         maven { url 'https://jitpack.io' }
         maven {
             url "http://maven.aliyun.com/nexus/content/repositories/releases"
+            maven { url 'http://maven.aliyun.com/nexus/content/repositories/google' }
+            maven { url 'https://maven.aliyun.com/repository/public' }
+            maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter'}
+
         }
     }
 }
